[DOCS] v2.3-mvp - Actualización de documentación técnica ARCHIVOS ACTUALIZADOS: - README.md: Métricas v2.3-mvp (23.72ns latency, 165M ops/s throughput) - ARQUITECTURA_VOLCAN_ENGINE.md: Especificación completa del motor README.md CAMBIOS: - Métricas de Certificación: Actualizadas con benchmark real   * Latency: 1.52ns → 23.72ns (-84% vs target AAA+)   * Throughput: 12M → 165M ops/s (+1550%)   * Boot Time: 51ms → 0.264ms (-99.7%) - Sección 2.1: Características AAA+ Implementadas   * Graceful Shutdown (6 pasos deterministas)   * Baseline Validation (A/B/C)   * 3-Tier Power Saving (SpinWait → Sleep 1ms → Sleep 100ms)   * Deterministic 4-Phase Loop - Sección 3.4: Tests de Validación   * BusBenchmarkTest   * Test_GracefulShutdown   * Test_PowerSaving - Versión: v2.2-stable → v2.3-mvp - Fecha: 2026-01-12 → 2026-01-21 ARQUITECTURA_VOLCAN_ENGINE.md CAMBIOS: - Actualizado a Production Ready (v2.3-mvp) - Sección 2.1: EngineKernel (4 fases)   * Fase 1: Input Latch   * Fase 2: Bus Processing   * Fase 3: Systems Execution   * Fase 4: State Audit - Sección 2.2: VolcanAtomicBus   * Métricas AAA+: 23.72ns latency, 165M ops/s throughput   * Cache Line Padding (64 bytes, 21 variables)   * Thermal Signature Validation - Sección 2.4: VolcanDataAccelerator (SIMD)   * Vector Species: AVX-512 (512 bits)   * Throughput: 4.17 GB/s - Sección 5: Características AAA+ Implementadas   * Graceful Shutdown (6 pasos)   * Baseline Validation Protocol (A/B/C)   * Mechanical Sympathy (Cache Line Padding, VarHandles) - Comparación con motores comerciales (Unity, Unreal, Godot) MÉTRICAS v2.3-mvp: - Boot Time: 0.264ms (AAA+ Target: <1ms) ✓ - Bus Latency: 23.72ns (AAA+ Target: <150ns) ✓ - Throughput: 165M ops/s (AAA+ Target: >10M ops/s) ✓ - SIMD Bandwidth: 4.17 GB/s (AAA+ Target: >4.0 GB/s) ✓